Fix index page scrolling on smaller devices

--- a/css/main.css
+++ b/css/main.css
@@ -85,3 +85,9 @@ h1.post-title {
 .panel-cover--collapsed .panel-cover__description--main {
   display: none;
 }
+
+@media (max-width: 960px) {
+  .panel-cover {
+    overflow: auto;
+  }
+}
